--- a/requirements.txt
+++ b/requirements.txt
@@ -3,8 +3,5 @@ flask-login
 pymysql
 mysql-connector-python
 werkzeug
-<<<<<<< HEAD
 python-dotenv
-=======
-python-dotenv
->>>>>>> 9f27821a3043875e3f622cb0e7aedc10ba84c3e9
+pytest
