Added mail verification for sign up and forgot password

--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
-EMAIL_SENDER=harshachandran0304@gmail.com
-EMAIL_PASSWORD=pa04#ni09
+EMAIL_SENDER=neatnestcleaningservice1.0@gmail.com
+EMAIL_PASSWORD=kcww zbfo hhkc ygkq
 SMTP_SERVER=smtp.gmail.com
 SMTP_PORT=587
 DB_HOST=mydb.c1q2w4gis34j.ap-south-1.rds.amazonaws.com
